--- a/templates/add_appointment/appointmentAll.html.twig
+++ b/templates/add_appointment/appointmentAll.html.twig
@@ -21,7 +21,7 @@
                 <th scope="col">Nom du commercial</th>
                 <th scope="col">Nom du client</th>
                 <th scope="col">Date du rendez-vous</th>
-                <th scope="col">Detail</th>
+                <th scope="col">Détails</th>
             </tr>
             </thead>
             <tbody>
@@ -38,7 +38,7 @@
             </tbody>
         </table><br/>
 
-        <a href="/add/appointment" class="login">Ajouter un rendez-vous</a>
+        <div class="btn-add"><a href="/add/appointment" class="login">Ajouter un rendez-vous</a></div>
 
 
     </div>
