--- a/templates/add_compagny/compagnyAll.html.twig
+++ b/templates/add_compagny/compagnyAll.html.twig
@@ -25,7 +25,7 @@
                 <th scope="col">TVA</th>
                 <th scope="col">NAF</th>
                 <th scope="col">Siret</th>
-                <th scope="col">Detail</th>
+                <th scope="col">Détails</th>
             </tr>
             </thead>
             <tbody>
@@ -44,7 +44,7 @@
             </tbody>
         </table><br/>
 
-        <a href="/add/compagny" class="login">Ajouter une entreprise</a>
+        <div class="btn-add"><a href="/add/compagny" class="login">Ajouter une entreprise</a></div>
 
 
     </div>
