--- a/templates/add_exchange/exchangeAll.html.twig
+++ b/templates/add_exchange/exchangeAll.html.twig
@@ -4,7 +4,6 @@
 
 {% block body %}
 
-
     <style>
         body {
             background-color: var(--primary-color);
@@ -14,14 +13,14 @@
     <div class="dashboard-homepage">
 
         <table>
-            <caption>Rendez-vous</caption>
+            <caption>Échanges</caption>
             <thead>
             <tr>
                 <th scope="col">Client</th>
                 <th scope="col">Nom du commercial</th>
-                <th scope="col">Compagny</th>
+                <th scope="col">Entreprise</th>
                 <th scope="col">Type</th>
-                <th scope="col">Detail</th>
+                <th scope="col">Détails</th>
             </tr>
             </thead>
             <tbody>
@@ -38,7 +37,7 @@
             </tbody>
         </table><br/>
 
-        <a href="/add/exchange" class="login">Ajouter un échange</a>
+        <div class="btn-add"><a href="/add/exchange" class="login">Ajouter un échange</a></div>
 
 
     </div>
