--- a/templates/add_client/clientAll.html.twig
+++ b/templates/add_client/clientAll.html.twig
@@ -19,14 +19,14 @@
             <caption>Clients</caption>
             <thead>
             <tr>
-                <th scope="col">Email</th>
+                <th scope="col">E-mail</th>
                 <th scope="col">Nom</th>
                 <th scope="col">Prenom</th>
                 <th scope="col">Téléphone</th>
                 <th scope="col">Adresse</th>
-                <th scope="col">Cp</th>
-                <th scope="col">City</th>
-                <th scope="col">Detail</th>
+                <th scope="col">Code Postal</th>
+                <th scope="col">Ville</th>
+                <th scope="col">Détails</th>
             </tr>
             </thead>
             <tbody>
@@ -45,7 +45,7 @@
             </tbody>
         </table><br/>
 
-        <a href="/add/client" class="login">Ajouter une client</a>
+        <div class="btn-add"><a href="/add/client" class="login">Ajouter un client</a></div>
 
 
     </div>
