--- a/templates/add_compagny/index.html.twig
+++ b/templates/add_compagny/index.html.twig
@@ -20,9 +20,15 @@
                 <h1 class="h1-form-dashboard">Ajouter une entreprise</h1>
 
                 {{ form_start(compagny) }}
-                {{ form_row(compagny.name) }}
-                {{ form_row(compagny.adress) }}
-                {{ form_row(compagny.send_adress) }}
+                {{ form_row(compagny.name, {
+                    label: 'Nom'
+                }) }}
+                {{ form_row(compagny.adress, {
+                    label: 'Adresse'
+                }) }}
+                {{ form_row(compagny.send_adress, {
+                    label: 'Adresse d\'envoie'
+                }) }}
                 {{ form_row(compagny.TVA) }}
                 {{ form_row(compagny.NAF) }}
                 {{ form_row(compagny.SIRET) }}
