--- a/templates/add_exchange/exchange.html.twig
+++ b/templates/add_exchange/exchange.html.twig
@@ -3,12 +3,22 @@
 {% block title %}Exchange{% endblock %}
 
 {% block body %}
-    <h1>Exchange</h1>
+    <style>
+        body {
+            background-color: var(--primary-color);
+        }
+    </style>
 
-    Client : {{exchange.clientId.name}}
-    Nom du commercial : {{exchange.userId.name}}
-    Compagny : {{ exchange.compagny.name }}
-    Type : {{exchange.type}}
-    Detail : {{exchange.detail}}
+    <div class="dashboard-homepage">
+        <div class="dashboard-homepage-details">
+            <h1>Détails de l'échange avec {{exchange.clientId.name}}</h1>
+
+            <div class="card"><h2>Client : </h2>{{exchange.clientId.name}}</div>
+            <div class="card"><h2>Nom du commercial : </h2>{{ exchange.userId.name }}</div>
+            <div class="card"><h2>Entreprise : </h2>{{ exchange.compagny.name }}</div>
+            <div class="card"><h2>Type : </h2>{{ exchange.type }}</div>
+            <div class="card"><h2>Détails : </h2>{{ exchange.detail }}</div>
+        </div>
+    </div>
 
 {% endblock %}
