--- a/templates/add_exchange/index.html.twig
+++ b/templates/add_exchange/index.html.twig
@@ -16,13 +16,17 @@
         <div class="form">
 
             <div class="form-txt">
-                <h1 class="h1-form-dashboard">Ajouter une note</h1>
+                <h1 class="h1-form-dashboard">Ajouter un Échange</h1>
 
                 {{ form_start(exchange) }}
-                {{ form_row(exchange.type) }}
-                {{ form_row(exchange.detail) }}
+                {{ form_row(exchange.type, {
+                    label: 'Type d\'échange'
+                }) }}
+                {{ form_row(exchange.detail, {
+                    label: 'Détails'
+                }) }}
                 {{ form_row(exchange.client_id) }}
-                    <button type="submit" class="btn">Ajouter une note</button>
+                    <button type="submit" class="btn">Ajouter un échange</button>
                     {{ form_end(exchange) }}
             </div>
         </div>
