--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -11,8 +11,11 @@
     <div class="fix-block-dashboard"></div>
 
     <div class="block-dashboard">
-        <div class="dashboard-homepage">
-            Bienvenue sur notre dashboard du CRM le plus performant du paf !
+        <div class="dashboard-homepage-illustration">
+
+            <img src="{{ asset('images/dashboard-illustration.svg') }}" alt="HomePage">
+
+            <h1>Bienvenue sur notre dashboard du CRM le plus performant du paf !</h1>
         </div>
     </div>
     <div class="clear"></div>
