--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -71,7 +71,8 @@
             <div class="block33">
                 <p>
                     <a href="#informations">Informations</a> <br/>
-                    <a href="#avantages">Avantages</a>
+                    <a href="#avantages">Avantages</a> <br/>
+                    <a href="/login">Se connecter</a>
                 </p>
             </div>
             <div class="clear"></div>
