--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -23,16 +23,30 @@
                 <h1>Inscrire un utilisateur</h1>
 
             {{ form_start(registrationForm) }}
-            {{ form_row(registrationForm.first_name) }}
-            {{ form_row(registrationForm.name) }}
-            {{ form_row(registrationForm.email) }}
-            {{ form_row(registrationForm.adress) }}
-            {{ form_row(registrationForm.phonenumber) }}
-            {{ form_row(registrationForm.plainPassword, {
-                label: 'Password'
+            {{ form_row(registrationForm.first_name, {
+                label: 'Prénom'
             }) }}
-            {{ form_row(registrationForm.roles) }}
-            {{ form_row(registrationForm.agreeTerms) }}
+            {{ form_row(registrationForm.name, {
+                label: 'Nom'
+            }) }}
+            {{ form_row(registrationForm.email, {
+                label: 'E-mail'
+            }) }}
+            {{ form_row(registrationForm.adress, {
+                label: 'Adresse'
+            }) }}
+            {{ form_row(registrationForm.phonenumber, {
+                label: 'Téléphone'
+            }) }}
+            {{ form_row(registrationForm.plainPassword, {
+                label: 'Mot de passe'
+            }) }}
+            {{ form_row(registrationForm.roles, {
+                label: 'Rôle'
+            }) }}
+            {{ form_row(registrationForm.agreeTerms, {
+                label: 'Acceptation des termes'
+            }) }}
 
                 <button type="submit" class="btn">Inscrire un utilisateur</button>
                 {{ form_end(registrationForm) }}
