--- a/templates/add_ticket/ticketAll.html.twig
+++ b/templates/add_ticket/ticketAll.html.twig
@@ -40,7 +40,7 @@
             </tbody>
         </table><br/>
 
-        <div class="btn-add"><a href="/add/exchange" class="login">Ajouter un ticket</a></div>
+        <div class="btn-add"><a href="/add/ticket" class="login">Ajouter un ticket</a></div>
 
 
     </div>
