--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,7 +30,9 @@
             <li><a href="/invoice">Factures</a></li>
             <li><a href="/quotation">Devis</a></li>
             <li><a href="/ticket">Tickets</a></li>
-            <li><a href="/register">Utilisateurs</a></li>
+            {% if is_granted('ROLE_ADMIN') %}
+                <li><a href="/register">Utilisateurs</a></li>
+            {% endif %}
             <li><a href="/logout" class="login">Deconnexion</a></li>
         </ul>
     </div>
@@ -67,7 +69,9 @@
                 <li class="unshow"><a href="/invoice">Factures</a></li>
                 <li class="unshow"><a href="/quotation">Devis</a></li>
                 <li class="unshow"><a href="/ticket">Tickets</a></li>
-                <li class="unshow"><a href="/register">Utilisateurs</a></li>
+                {% if is_granted('ROLE_ADMIN') %}
+                    <li class="unshow"><a href="/register">Utilisateurs</a></li>
+                {% endif %}
                 <li class="unshow"><a href="/logout" class="login">Deconnexion</a></li>
             {% else %}
                 <li><a href="#informations">Informations</a></li>
