--- a/templates/add_compagny/compagny.html.twig
+++ b/templates/add_compagny/compagny.html.twig
@@ -13,12 +13,12 @@
         <div class="dashboard-homepage-details">
             <h1>Détails de l'entreprise {{compagny.name}}</h1>
 
-            <div class="card"><h2>Name : </h2>{{compagny.name}}</div>
-            <div class="card"><h2>Adress : </h2>{{ compagny.adress }}</div>
-            <div class="card"><h2>Send Adress : </h2>{{ compagny.sendAdress }}</div>
+            <div class="card"><h2>Nom : </h2>{{compagny.name}}</div>
+            <div class="card"><h2>Adresse : </h2>{{ compagny.adress }}</div>
+            <div class="card"><h2>Adresse d'envoi : </h2>{{ compagny.sendAdress }}</div>
             <div class="card"><h2>TVA : </h2>{{ compagny.tva }}</div>
             <div class="card"><h2>NAF : </h2>{{ compagny.naf }}</div>
-            <div class="card"><h2>Siret : </h2>{{ compagny.siret }}</div>
+            <div class="card"><h2> N° de siret : </h2>{{ compagny.siret }}</div>
         </div>
     </div>
 
