--- a/templates/add_exchange/exchangeAll.html.twig
+++ b/templates/add_exchange/exchangeAll.html.twig
@@ -13,7 +13,7 @@
     <div class="dashboard-homepage">
 
         <table>
-            <caption>Echanges</caption>
+            <caption>Échanges</caption>
             <thead>
             <tr>
                 <th scope="col">Client</th>
