--- a/templates/add_quotation/quotationAll.html.twig
+++ b/templates/add_quotation/quotationAll.html.twig
@@ -16,12 +16,13 @@
             <caption>Devis</caption>
             <thead>
             <tr>
-                <th scope="col">Ref</th>
-                <th scope="col">Status</th>
+                <th scope="col">Référence</th>
+                <th scope="col">Statut</th>
                 <th scope="col">TVA</th>
                 <th scope="col">TTC</th>
                 <th scope="col">HT</th>
                 <th scope="col">Client</th>
+                <th scope="col">Détails</th>
             </tr>
             </thead>
             <tbody>
