--- a/templates/add_ticket/ticketAll.html.twig
+++ b/templates/add_ticket/ticketAll.html.twig
@@ -17,9 +17,9 @@
             <caption>Tickets</caption>
             <thead>
             <tr>
-                <th scope="col">Object</th>
+                <th scope="col">Objet</th>
                 <th scope="col">Informations</th>
-                <th scope="col">Status</th>
+                <th scope="col">Statut</th>
                 <th scope="col">Client</th>
                 <th scope="col">Créateur</th>
                 <th scope="col">Détails</th>
