--- a/templates/add_client/client.html.twig
+++ b/templates/add_client/client.html.twig
@@ -16,7 +16,7 @@
 
             <div class="card"><h2>Email : </h2>{{client.email}}</div>
             <div class="card"><h2>Nom : </h2>{{ client.name }}</div>
-            <div class="card"><h2>Prenom : </h2>{{ client.firstname }}</div>
+            <div class="card"><h2>Prénom : </h2>{{ client.firstname }}</div>
             <div class="card"><h2>Téléphone : </h2>{{ client.phonenumber }}</div>
             <div class="card"><h2>Adresse : </h2>{{ client.adress }}</div>
             <div class="card"><h2>Cp : </h2>{{ client.cp }}</div>
