--- a/templates/add_client/clientAll.html.twig
+++ b/templates/add_client/clientAll.html.twig
@@ -21,7 +21,7 @@
             <tr>
                 <th scope="col">E-mail</th>
                 <th scope="col">Nom</th>
-                <th scope="col">Prenom</th>
+                <th scope="col">Prénom</th>
                 <th scope="col">Téléphone</th>
                 <th scope="col">Adresse</th>
                 <th scope="col">Code Postal</th>
