--- a/templates/add_invoice/invoiceAll.html.twig
+++ b/templates/add_invoice/invoiceAll.html.twig
@@ -16,13 +16,14 @@
             <caption>Factures</caption>
             <thead>
             <tr>
-                <th scope="col">Ref</th>
+                <th scope="col">Référence</th>
                 <th scope="col">Status</th>
                 <th scope="col">TVA</th>
                 <th scope="col">TTC</th>
                 <th scope="col">HT</th>
                 <th scope="col">Client</th>
-                <th scope="col">user</th>
+                <th scope="col">Nom du commercial</th>
+                <th scope="col">Détails</th>
             </tr>
             </thead>
             <tbody>
@@ -42,7 +43,7 @@
             </tbody>
         </table><br/>
 
-        <div class="btn-add"><a href="/add/invoice" class="login">Ajouter un échange</a></div>
+        <div class="btn-add"><a href="/add/invoice" class="login">Ajouter une facture</a></div>
 
 
     </div>
