--- a/templates/add_quotation/index.html.twig
+++ b/templates/add_quotation/index.html.twig
@@ -19,11 +19,21 @@
                 <h1 class="h1-form-dashboard">Ajouter un devis</h1>
 
                 {{ form_start(quotation) }}
-                {{ form_row(quotation.ref) }}
-                {{ form_row(quotation.status) }}
-                {{ form_row(quotation.TVA) }}
-                {{ form_row(quotation.TTC) }}
-                {{ form_row(quotation.HT) }}
+                {{ form_row(quotation.ref, {
+                    label: 'Référence'
+                }) }}
+                {{ form_row(quotation.status, {
+                    label: 'Statut'
+                }) }}
+                {{ form_row(quotation.TVA, {
+                    label: 'TVA'
+                }) }}
+                {{ form_row(quotation.TTC, {
+                    label: 'TTC'
+                }) }}
+                {{ form_row(quotation.HT, {
+                    label: 'HT'
+                }) }}
                  <button type="submit" class="btn">Ajouter un devis</button>
                     {{ form_end(quotation) }}
             </div>
