--- a/templates/add_quotation/quotation.html.twig
+++ b/templates/add_quotation/quotation.html.twig
@@ -18,8 +18,8 @@
             <div class="form-txt">
                 <h1 class="h1-form-dashboard">Détails du devis</h1>
 
-                <div class="card"><h2>Ref : </h2>{{quotation.ref}}</div>
-                <div class="card"><h2>Status : </h2>{{ quotation.status }}</div>
+                <div class="card"><h2>Référence : </h2>{{quotation.ref}}</div>
+                <div class="card"><h2>Statut : </h2>{{ quotation.status }}</div>
                 <div class="card"><h2>TVA : </h2>{{ quotation.tva }}</div>
                 <div class="card"><h2>TTC : </h2>{{ quotation.ttc }}</div>
                 <div class="card"><h2>HT : </h2>{{ quotation.ht }}</div>
