--- a/templates/add_ticket/index.html.twig
+++ b/templates/add_ticket/index.html.twig
@@ -19,8 +19,12 @@
                 <h1 class="h1-form-dashboard">Ajouter une ticket</h1>
 
                 {{ form_start(ticket) }}
-                {{ form_row(ticket.object) }}
-                {{ form_row(ticket.details) }}
+                {{ form_row(ticket.object, {
+                    label: 'Objet'
+                }) }}
+                {{ form_row(ticket.details, {
+                    label: 'Détails'
+                }) }}
                 {{ form_row(ticket.client) }}
                  <button type="submit" class="btn">Ajouter un ticket</button>
                     {{ form_end(ticket) }}
