--- a/templates/add_ticket/ticket.html.twig
+++ b/templates/add_ticket/ticket.html.twig
@@ -14,7 +14,7 @@
         <div class="dashboard-homepage-details">
             <h1>Détails du ticket du client {{ticket.client.name}}</h1>
 
-            <div class="card"><h2>Object : </h2>{{ticket.object}}</div>
+            <div class="card"><h2>Objet : </h2>{{ticket.object}}</div>
             <div class="card"><h2>Details : </h2>{{ ticket.details }}</div>
             <div class="card"><h2>Status : </h2>{{ ticket.status }}</div>
             <div class="card"><h2>Client : </h2>{{ ticket.client.name }}</div>
